--- a/appport.config.json
+++ b/appport.config.json
@@ -1,5 +1,5 @@
 {
-  "version": "V2.X B31B2",
+  "version": "V2.0 B31B2",
   "app_name": "MPX Studio",
   "subtitle": "EA PORTFOLIO",
   "organization": "MPX",
